# MAIS-ProjectFinal

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tasks.db
course-project/: _course-project-task.md  course-project-task.md  project_content.md  project_dev_team.md  project_market_analyst.md  project_support.md
dev-team/: .env.example  .gitignore  DEVLOG.md  Dockerfile  LESSONS_LEARNED.md  app.py  config.py  docker-compose.yml  github_integration.py  graph.py  ingest.py  langfuse_prompts.py  main.py  nodes.py  output_manager.py  prompts_reference.md  requirements.txt  retriever.py  schemas.py  state.py  token_tracker.py  tools.py  upload_prompts.py
dev-team/agents/: ba.py  developer.py  qa.py
src/: __init__.py  app.py  ascii_art.py  ascii_art_generator.py  calculator.py  container_load_calculator.py  csv_summary.py  expense_tracker.py  landed_cost.py  main.py  markdown_converter.py  markdown_to_html.py  password_generator.py  stack_calculator.py  temperature_conversion.py  temperature_converter.py  todo_app.py  todo_cli.py  weekday_calculator.py
tests/: conftest.py  test_api.py  test_app.py  test_ascii_art.py  test_ascii_art_gen.py  test_ascii_art_generator.py  test_cli.py  test_container_load_calculator.py  test_converter.py  test_csv_summary.py  test_expense_tracker.py  test_landed_cost.py  test_main.py  test_markdown_converter.py  test_markdown_to_html.py  test_password_generator.py  test_reconciler.py  test_reconciliation.py  test_temperature_converter.py  test_todo_cli.py  test_weekday_calculator.py
(+268 files in other folders)
