[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-html-converter"
version = "0.1.0"
description = "A small dependency-free Markdown to HTML converter."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Developer" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
